updates to domain files

--- a/_02-02_academics_text.qmd
+++ b/_02-02_academics_text.qmd
@@ -1,11 +1,71 @@
-<<PROMPT>>
+# This is an example ".prompt" file
+# It is used to define and reuse prompts within Continue
+# Each .prompt file can be accessed by typing "@prompts" in the Chat input
 
-## Area: Academic Skills
+# A prompt file consists of two parts:
+# 1. Everything above the "---" is YAML. Here you can set "temperature", "description", and other options
+# 2. Everything below the "---" is the prompt body
 
-Summarize and interpret these neuropsychological test scores related to the area denoted above. For scores that are Below { range } to Exceptionally Low, give a brief example of how this could impact the patient's daily functioning. Organize your summary and interpretation in order from scores that are Exceptionally High/Above { range } to Exceptionally Low/Below { range } to delineate relative strengths and weaknesses, respectively. Finally, recommended additional support that the patient should receive in areas in which scores fall Below { range } to Exceptionally Low, or scores that are significantly discrepant and lower than expected relative to other scores (e.g., verbal reasoning versus nonverbal reasoning).
+# If you do not want to set any options, you do not need to include the "---"
 
-<<EXAMPLE>>
+# In the body, you can reference:
+# 1. Files, using either absolute or relative paths (based on the workspace root)
+  # @_02-02_academics.qmd
+  # @src/test/test.py
+  # @/Users/me/Desktop/my-project/src/test/test.py
+# 2. URLs, for example
+  # @https://example.com
+# 3. Context providers, for example
+  # @currentFile
+  # @os
+  # @repo-map
 
-TODO:
+---
 
-<<END>>
+# Academic Performance Summary Instructions
+
+## Purpose
+
+Create a concise, professional summary of the patient's academic performance based on neurocognitive assessment results.
+
+## Format Requirements
+
+- Write a single paragraph in third-person, past tense
+- Focus on real-world functional implications rather than raw test scores
+- Highlight significant strengths and weaknesses, with less emphasis on average-range scores
+- Capitalize performance descriptors (e.g., "Below Average," "Average," "Above Average")
+- Omit specific test scores unless presenting meaningful percentile information (e.g., "Above Average, higher than 95% of the general population")
+
+## Content Focus
+
+- Translate assessment results into practical academic implications
+- Interpret findings in terms of everyday functioning
+- Emphasize how performance relates to real-world academic settings
+
+## Style Guidelines
+
+- Professional clinical tone
+- Concise language
+- Grammatically correct
+- Avoid simply restating test names and their standard descriptions
+
+---
+
+Harry exhibited predominantly Average academic functioning across most domains.
+Reading abilities, including comprehension and fluency, were sufficiently
+developed to support independent classroom learning and completion of
+grade-level assignments. Mathematical competencies, encompassing both
+calculation and practical problem-solving, were similarly intact, enabling Harry
+to handle typical classroom mathematics demands. Oral language skills also fell
+within the Average range, suggesting adequate verbal participation and
+comprehension during classroom discussions. However, written expression emerged
+as a notable area of relative weakness, falling in the Low Average range.
+Specifically, Harry demonstrated difficulties with phonic decoding fluency and
+spelling accuracy, which may impact written communication efficiency. These
+challenges could manifest in practical academic contexts through slower writing
+speed, increased proofreading demands, and potential reluctance to engage in
+writing-intensive tasks. While Harry's overall academic profile remained solidly
+Average, targeted support for written expression skills would likely benefit
+academic performance in writing-heavy subjects and assignments.
+
+
