--- a/src/rmd/pluck_basc3_prs_adolescent.Rmd
+++ b/src/rmd/pluck_basc3_prs_adolescent.Rmd
@@ -1,11 +1,13 @@
 ---
-title: "Pluck Tables BASC-3 PRS Adolescent"
+title: |
+  <center> BASC-3 PRS Adolescent </center>
+date: "`r Sys.Date()`"
 params:
-  patient: Biggie
+  patient: Elias
   test: basc3_prs_adolescent
-  test_name: "BASC-3 PRS"
+  test_name: "BASC-3 PRS Adolescent"
   file:
-    label: "Upload BASC-3 PRS PDF file"
+    label: "Upload PDF file"
     value: file
     input: file
   pages: [4, 4]
@@ -14,591 +16,248 @@ output:
     highlight: kate
 ---
 
-# BASC-3 PRS Adolescent
-
 ## Setup
 
 ```{r setup, include = FALSE}
-library(dplyr)
-library(fs)
-library(hablar)
-library(here)
-library(knitr)
-library(magrittr)
-library(miniUI)
-library(readr)
-library(rJava)
-library(rmarkdown)
-library(shiny)
-library(tabulapdf)
-library(tibble)
-library(tidyr)
-library(bwu)
-library(rmdformats)
 # Set JAVA environment
 Sys.setenv(
   JAVA_HOME =
-    "/Library/Java/JavaVirtualMachines/graalvm-community-openjdk-22.0.1+8.1/Contents/Home"
+    "/Library/Java/JavaVirtualMachines/graalvm-jdk-22.0.1+8.1/Contents/Home"
 )
 options(java.parameters = "-Xmx16000m")
-# Set knitr options
 knitr::opts_chunk$set(
   root.dir = normalizePath("./"),
-  echo = FALSE,
+  echo = TRUE,
   message = FALSE,
-  warning = FALSE,
+  warning = TRUE,
   error = TRUE
 )
+library(glue)
+library(here)
+library(knitr)
+library(pdftools)
+library(qs2)
+library(rmarkdown)
+library(rmdformats)
+library(shiny)
+library(snakecase)
+library(tabulapdf)
+library(tidyverse)
+library(xfun)
+library(yaml)
+library(bwu)
+library(NeurotypR)
 ```
 
-## Patient
+## Parameters
 
-```{r patient}
+```{r}
 patient <- params$patient
-```
-
-## Test
-
-Name of neuropsych test or rating scale.
-
-```{r test}
 test <- params$test
 test_name <- params$test_name
-```
-
-## Pages
-
-```{r pages}
 pages <- params$pages
+# file <- file.path(file.choose())
+file <- file.path(params$file)
 ```
 
-## Load PDF file and save as file.path
-
-```{r file}
-# pdf_file <- file.path(file.choose())
-# pdf_file <- "/Users/joey/neuropsychology/Biggie/pdf/BASC-3-PRS-Report_51189744_1693458387761.pdf"
-pdf_file <- params$file
-```
-
-## Write/Read PDF file.path
-
-```{r write-file}
-writeLines(pdf_file, here::here(patient, "pre_csv", paste0(test, ".pdf")))
-```
-
-```{r read-file}
-# pdf_file <- readLines(here::here(patient, "pre_csv", paste0(test, ".pdf")))
-```
-
-## Locate areas
+## Areas
 
 ```{r areas}
+# PRS
 areas <- list(
-  table1 = c(175, 88, 228, 520),
-  table2 = c(375, 35, 558, 574)
+  table1 = c(177, 87, 228, 523),
+  table2 = c(376, 37, 557, 575)
 )
 ```
 
-```{r locate-areas}
-# areas <- bwu::gpluck_locate_areas(
-#   file = pdf_file,
-#   pages = pages
-# )
-```
-
-```{r save-areas}
-readr::write_rds(areas, here::here(patient, "pre_csv", "areas_basc3_prs.rds"))
-```
+## Extract Tables
 
 ```{r}
-# areas <- readr::read_rds(here::here(patient, "pre_csv", "areas_basc3_prs.rds"))
-```
-
-## Extract tables
-
-```{r extract}
-plucked_tables <- bwu::gpluck_extract_tables(
-  file = pdf_file,
+extracted_tables <- tabulapdf::extract_tables(
+  file = file,
   pages = pages,
   area = areas,
   guess = NULL,
-  method = "lattice",
+  method = "stream",
   output = "matrix"
 )
+
+# Save the extracted_tables object to a file in the 'data' folder
+qs2::qs_save(extracted_tables, file = paste0("data/extracted_tables_", test, ".qs"))
+
+# Load the extracted_tables object from the 'data' folder
+extracted_tables <- qs2::qs_read(paste0("data/extracted_tables_", test, ".qs"))
 ```
 
-# CLINICAL AND ADAPTIVE SCORE TABLE
-
-## Column names per test/subtest/measure
-
-This will vary by measure/table.
-
-## Convert to tibble and format
+## CLINICAL AND ADAPTIVE SCORE TABLE
 
 ```{r pluck-df1}
-table1 <- data.frame(plucked_tables[[1]])
+table1 <- data.frame(extracted_tables[[1]])
 column_names1 <- c("scale", "raw_score", "score", "percentile", "ci_95")
 colnames(table1) <- column_names1
-# Convert columns to double
+# Convert columns to double, handling non-numeric values
 to_double <- c("raw_score", "score", "percentile")
-table1[to_double] <- lapply(table1[to_double], as.numeric)
+table1[to_double] <- lapply(table1[to_double], function(x) {
+  # First convert to character to ensure consistent handling
+  x_char <- as.character(x)
+  # Replace any non-numeric values (like "-" or "") with NA
+  x_char[!grepl("^\\s*-?\\d+\\.?\\d*\\s*$", x_char)] <- NA
+  # Convert to numeric with warning suppression
+  suppressWarnings(as.numeric(x_char))
+})
 ```
 
 ```{r pluck-df2}
-table2 <- data.frame(plucked_tables[[2]])
-column_names2 <- c("scale", "raw_score", "score", "percentile", "ci_95", "difference", "sig_level", "freq_of_diff")
+table2 <- data.frame(extracted_tables[[2]])
+column_names2 <- c("scale", "raw_score", "score", "percentile", "ci_95", "difference", "sig_level", "freq") # frequency doesnt extract if no data
 colnames(table2) <- column_names2
-# Convert columns to double
+# Convert columns to double, handling non-numeric values
 to_double <- c("raw_score", "score", "percentile")
-table2[to_double] <- lapply(table2[to_double], as.numeric)
+table2[to_double] <- lapply(table2[to_double], function(x) {
+  # First convert to character to ensure consistent handling
+  x_char <- as.character(x)
+  # Replace any non-numeric values (like "-" or "") with NA
+  x_char[!grepl("^\\s*-?\\d+\\.?\\d*\\s*$", x_char)] <- NA
+  # Convert to numeric with warning suppression
+  suppressWarnings(as.numeric(x_char))
+})
+
+# Bind rows into full data.frame
+df <- dplyr::bind_rows(table1, table2)
 ```
 
-## Select variables to keep
+## Functions
 
-```{r vars}
-keep <- c("scale", "raw_score", "score", "percentile", "ci_95")
-table1 <- table1 |> dplyr::select(all_of(keep))
-table2 <- table2 |> dplyr::select(all_of(keep))
-```
+```{r}
+# Function to process the extracted tables
+process_basc3_tables <- function(basc3_data) {
+  table_list <- purrr::map(basc3_data, as.data.frame) |>
+    set_names(paste0("table", 1:length(basc3_data))) # Rename tables
 
-# Mutate columns
+  list2env(table_list, .GlobalEnv) # Assign to global environment
+}
 
-```{r mutate1}
-table1 <- bwu::gpluck_make_columns(
-  data = table1,
-  test = params$test,
-  test_name = params$test_name,
-  domain = "Behavioral/Emotional/Social",
-  range = "",
-  subdomain = "",
-  narrow = "",
-  timed = "",
-  verbal = "",
-  pass = "",
-  test_type = "rating_scale",
-  score_type = "t_score",
-  absort = "",
-  description = "",
-  result = ""
-)
-```
+# Loop over the list and write each matrix to a CSV file
+for (i in seq_along(extracted_tables)) {
+  write.csv(extracted_tables[[i]], file = paste0(test, "_", i, ".csv"), row.names = FALSE)
+}
 
-```{r mutate2}
-table2 <- bwu::gpluck_make_columns(
-  data = table2,
-  test = params$test,
-  test_name = params$test_name,
-  domain = "Behavioral/Emotional/Social",
-  range = "",
-  subdomain = "",
-  narrow = "",
-  timed = "",
-  verbal = "",
-  pass = "",
-  test_type = "rating_scale",
-  score_type = "t_score",
-  absort = "",
-  description = "",
-  result = ""
-)
-```
+# convert columns
+convert_columns <- function(df) {
+  # Specify the columns to be converted to numeric
+  numeric_cols <- c("score", "percentile")
 
-## Subdomains
+  # Convert specified columns to numeric
+  df[numeric_cols] <- lapply(df[numeric_cols], function(x) as.numeric(as.character(x)))
 
-```{r subdomain1}
-table1 <-
-  table1 |>
-  mutate(
-    subdomain = case_when(
-      scale == "Externalizing Problems" ~ "Externalizing Problems",
-      scale == "Internalizing Problems" ~ "Internalizing Problems",
-      scale == "Behavioral Symptoms Index" ~ "Behavioral Symptoms Index",
-      scale == "Adaptive Skills" ~ "Adaptive Skills",
-      TRUE ~ as.character(subdomain)
-    )
+  # Convert remaining columns to character
+  char_cols <- setdiff(names(df), numeric_cols)
+  df[char_cols] <- lapply(df[char_cols], as.character)
+
+  return(df)
+}
+
+# Function to replace "-" with NA and filter out rows with no real data
+filter_real_data <- function(table, key_columns) {
+  table <- table |>
+    mutate(across(all_of(key_columns), ~ if_else(. == "-", NA_character_, as.character(.)))) |>
+    mutate(across(all_of(key_columns), as.numeric)) |>
+    filter(rowSums(is.na(select(., all_of(key_columns)))) < length(key_columns))
+
+  return(table)
+}
+
+# Function to extract text from PDF
+get_text <- function(file) {
+  tryCatch(
+    {
+      txt <- pdftools::pdf_text(file) |>
+        stringr::str_split("\n") |>
+        unlist()
+      return(txt)
+    },
+    error = function(e) {
+      message("Error reading PDF: ", e)
+      return(NULL)
+    }
   )
+}
 ```
 
-```{r subdomain2}
-table2 <-
-  table2 |>
-  mutate(
-    subdomain = case_when(
-      scale == "Hyperactivity" ~ "Externalizing Problems",
-      scale == "Aggression" ~ "Externalizing Problems",
-      scale == "Conduct Problems" ~ "Externalizing Problems",
-      scale == "Anxiety" ~ "Internalizing Problems",
-      scale == "Depression" ~ "Internalizing Problems",
-      scale == "Somatization" ~ "Internalizing Problems",
-      scale == "Atypicality" ~ "Behavioral Symptoms Index",
-      scale == "Withdrawal" ~ "Behavioral Symptoms Index",
-      scale == "Attention Problems" ~ "Behavioral Symptoms Index",
-      scale == "Adaptability" ~ "Adaptive Skills",
-      scale == "Social Skills" ~ "Adaptive Skills",
-      scale == "Leadership" ~ "Adaptive Skills",
-      scale == "Activities of Daily Living" ~ "Adaptive Skills",
-      scale == "Functional Communication" ~ "Adaptive Skills",
-      TRUE ~ as.character(subdomain)
-    )
-  )
+## Match with lookup table
+
+```{r eval = TRUE}
+# Load the lookup table
+lookup_table <- readr::read_csv("~/reports/neuropsych_lookup_table_combined.csv")
+
+# Merge the data with the lookup table
+df_merged <- dplyr::mutate(df, test = test) |>
+  dplyr::left_join(lookup_table, by = c("test" = "test", "scale" = "scale")) |>
+  dplyr::relocate(c(test, test_name), .before = scale)
+
+# add missing columns
+df_mutated <- bwu::gpluck_make_columns(
+  df_merged,
+  range = "",
+  result = "",
+  absort = NULL
+)
 ```
 
 ## Test score ranges
 
-```{r test-score-ranges}
-table1 <- bwu::gpluck_make_score_ranges(table = table1, test_type = "rating_scale")
-table2 <- bwu::gpluck_make_score_ranges(table = table2, test_type = "rating_scale")
-```
-
-### Narrow subdomains
-
-```{r narrow1}
-table1 <-
-  table1 |>
-  mutate(
-    narrow = case_when(
-      scale == "Externalizing Problems" ~ "Disruptive Behavior",
-      scale == "Internalizing Problems" ~ "Mood",
-      scale == "Behavioral Symptoms Index" ~ "Emotional",
-      scale == "Adaptive Skills" ~ "Adaptive",
-      TRUE ~ as.character(narrow)
-    )
-  )
-table2 <-
-  table2 |>
-  mutate(
-    narrow = case_when(
-      scale == "Hyperactivity" ~ "ADHD",
-      scale == "Aggression" ~ "Antisocial",
-      scale == "Conduct Problems" ~ "Antisocial",
-      scale == "Anxiety" ~ "Mood",
-      scale == "Depression" ~ "Mood",
-      scale == "Somatization" ~ "Personality",
-      scale == "Atypicality" ~ "ASD",
-      scale == "Withdrawal" ~ "ASD",
-      scale == "Attention Problems" ~ "ADHD",
-      scale == "Adaptability" ~ "Personality",
-      scale == "Social Skills" ~ "Social",
-      scale == "Leadership" ~ "Social",
-      scale == "Activities of Daily Living" ~ "Adaptive",
-      scale == "Functional Communication" ~ "Adaptive",
-      TRUE ~ as.character(narrow)
-    )
-  )
-```
-
-### Scale descriptions
-
-As necessary.
-
-```{r description1}
-table1 <-
-  table1 |>
-  mutate(
-    description = case_when(
-      scale == "Externalizing Problems" ~ "Externalizing Problems composite scale (parent rated)",
-      scale == "Internalizing Problems" ~ "Internalizing Problems composite scale (parent rated)",
-      scale == "Behavioral Symptoms Index" ~ "Behavioral Symptoms Index composite scale (parent rated)",
-      scale == "Adaptive Skills" ~ "Adaptive Skills composite scale (parent rated)",
-      TRUE ~ as.character(description)
-    )
-  )
-table2 <-
-  table2 |>
-  mutate(
-    description = case_when(
-      scale == "Hyperactivity" ~ "level of self-control (parent rated)",
-      scale == "Aggression" ~ "acting aggressively (parent rated)",
-      scale == "Conduct Problems" ~ "rule-breaking behavior (parent rated)",
-      scale == "Anxiety" ~ "anxiety-based behaviors (parent rated)",
-      scale == "Depression" ~ "depressive behaviors (parent rated)",
-      scale == "Somatization" ~ "health-related problems (parent rated)",
-      scale == "Atypicality" ~ "demonstration of clear, logical thought patterns and a general awareness of surroundings (parent rated)",
-      scale == "Withdrawal" ~ "avoid social situations and appears to be capable of developing and maintaining friendships with others (parent rated)",
-      scale == "Attention Problems" ~ "maintain necessary levels of attention (parent rated)",
-      scale == "Adaptability" ~ "adaptation to most situations and able to quickly recover from situations that are difficult (parent rated)",
-      scale == "Social Skills" ~ "socially adept and at ease (parent rated)",
-      scale == "Leadership" ~ "creative, works well under pressure, and/or can effectively unite others to work together (parent rated)",
-      scale == "Activities of Daily Living" ~ "able to adequately perform simple daily tasks in a safe and efficient manner (parent rated)",
-      scale == "Functional Communication" ~ "exhibits appropriate expressive and receptive communication skills and displays a strong ability to seek out and find new information independently (parent rated)",
-      TRUE ~ as.character(description)
-    )
-  )
-```
-
-## Row bind
-
-```{r bind-rows}
-df <- bind_rows(table1, table2)
+```{r ranges, eval = TRUE}
+df_mutated <- df_mutated |>
+  dplyr::mutate(range = NULL) |>
+  bwu::gpluck_make_score_ranges(table = df_mutated, test_type = "rating_scale") |>
+  dplyr::relocate(c(range), .after = percentile)
 ```
 
 ## Glue results
 
 ```{r result}
-if (params$test == "basc3_prs_adolescent") {
-  df <- df %>%
-    rowwise() %>%
-    mutate(result = glue::glue("{patient}'s parent-reported {description} was {range}.\n"))
+df_mutated <- df_mutated |>
+  dplyr::rowwise() |>
+  dplyr::mutate(result = glue::glue("{patient}'s self-reported {description} was {range}.\n"))
+
+df <- df_mutated |>
+  dplyr::select(-description) |>
+  dplyr::relocate(absort, .after = result)
+```
+
+## Write out final csv
+
+```{r write}
+# Make sure we're using the fully processed data.frame with all columns
+if (!exists("df") || ncol(df) <= 4) {
+  # If df wasn't properly updated in the results section, use df_mutated
+  writedf <- df_mutated
 } else {
-  df <- df %>%
-    rowwise() %>%
-    mutate(result = glue::glue("{patient}'s self-reported {description} was {range}.\n"))
+  writedf <- df
 }
+readr::write_excel_csv(writedf, here::here("data", "csv", paste0(test, ".csv")), col_names = TRUE)
 ```
 
-# Finalize and save
+## Extract Text
 
-## Write/save csv files
-
-```{r save-csv}
-test <- params$test
-readr::write_csv(
-  df,
-  here::here(patient, "csv", paste0(test, ".csv")), 
-  col_names = TRUE, 
-  na = ""
-  )
-```
-
-## Pluck Text
-
-```{r text}
-# save file as path
-file <- fs::fs_path(params$file)
-
-# BASC-3 PRS Child
-if (params$test == "basc3_prs_child") {
-  
+```{r}
+# BASC-3 Self-Report Adolescent
+if (params$test == "basc3_prs_adolescent") {
   ## extract text
-  get_text <- function(file) {
-    txt <- pdftools::pdf_text(file) |>
-      stringr::str_split("\n") |>
-      unlist()
+  basc3_prs_adolescent_txt <- get_text(file)
+  if (!is.null(basc3_prs_adolescent_txt)) {
+    # Replace long spaces with a column break symbol
+    basc3_prs_adolescent_squished <- stringr::str_replace_all(basc3_prs_adolescent_txt, "\\s{2,}", "- ") |>
+      stringr::str_remove_all(",")
+
+    # save as markdown
+    readr::write_lines(
+      basc3_prs_adolescent_squished,
+      here::here("basc3_prs_adolescent_text.md"),
+      sep = "\n"
+    )
   }
-  basc3_prs_txt <- pdftools::pdf_text(file) |>
-    stringr::str_split("\n") |>
-    unlist()
-  basc3_prs_txt
-
-  # Replace long spaces with a col break symbol
-  basc3_prs_squished <-
-    stringr::str_replace_all(basc3_prs_txt, "\\s{2,}", "- ") |>
-    stringr::str_remove_all(",")
-  basc3_prs_squished
-
-  # save as markdown
-  readr::write_lines(
-    basc3_prs_squished, 
-    here::here(patient, "basc3_prs_text.md"), 
-    sep = "\n")
-  # save as quarto
-  readr::write_lines(
-    basc3_prs_squished, 
-    here::here(patient, "basc3_prs_text.qmd"), 
-    sep = "\n")
-  # save as text
-  readr::write_lines(basc3_prs_squished, 
-    here::here(patient, "basc3_prs_text.txt"), 
-    sep = "\n"
-    )
-
-# BASC-3 SRP Adolescent?
-} else if (params$test == "basc3_prs_adolescent") {
-
-  ## extract text
-  get_text <- function(file) {
-    txt <- pdftools::pdf_text(file) |>
-      stringr::str_split("\n") |>
-      unlist()
-  }
-  basc3_prs_adolescent_txt <- pdftools::pdf_text(file) |>
-    stringr::str_split("\n") |>
-    unlist()
-  basc3_prs_adolescent_txt
-
-  # Replace long spaces with a col break symbol
-  basc3_prs_adolescent_squished <-
-    stringr::str_replace_all(basc3_prs_adolescent_txt, "\\s{2,}", "- ") |>
-    stringr::str_remove_all(",")
-  basc3_prs_adolescent_squished
-  
-  # save as markdown
-  readr::write_lines(basc3_prs_adolescent_squished, 
-    here::here(patient, "basc3_prs_adolescent_text.md"),
-    sep = "\n"
-    )
-  # save as quarto
-  readr::write_lines(basc3_prs_adolescent_squished, 
-    here::here(patient, "basc3_prs_adolescent_text.qmd"),
-    sep = "\n"
-    )
-  # save as text
-  readr::write_lines(basc3_prs_adolescent_squished, 
-    here::here(patient, "basc3_prs_adolescent_text.txt"), 
-    sep = "\n"
-    )
 }
 ```
 
-## Pluck Text
-
-```{r text2}
-library(pdftools)
-library(stringr)
-
-patient <- "Biggie"
-
-file <- here::here(patient, "pdf", "basc3_prs.pdf")
-
-## extract text
-get_text <- function(file) {
-  txt <- pdftools::pdf_text(file) |>
-    stringr::str_split("\n") |>
-    unlist()
-}
-text <- get_text(file)
-text
-
-get_table <- function(files, ...) {
-  L <- tabulapdf::extract_tables(files, output = "data.frame")
-  i <- which.max(lengths(L))
-  data.frame(L[[i]])
-}
-tables <- get_table1(files = file)
-
-# save dirty
-readr::write_lines(text, here::here(patient, "basc3_prs_text.md"), sep = "\n")
-readr::write_lines(text, here::here(patient, "basc3_prs_text.qmd"), sep = "\n")
-readr::write_lines(text, here::here(patient, "basc3_prs_text.typ"), sep = "\n")
-readr::write_lines(text, here::here(patient, "basc3_prs_text.txt"), sep = "\n")
-
-# Replace long spaces with a col break symbol
-text_squished <-
-  stringr::str_replace_all(text, "\\s{2,}", "- ") |>
-  stringr::str_remove_all(",")
-text_squished
-
-# save
-readr::write_lines(text_squished, here::here(patient, "basc3_prs_text_squished.md"), sep = "\n")
-readr::write_lines(text_squished, here::here(patient, "basc3_prs_text_squished.qmd"), sep = "\n")
-readr::write_lines(text_squished, here::here(patient, "basc3_prs_text_squished.typ"), sep = "\n")
-readr::write_lines(text_squished, here::here(patient, "basc3_prs_text_squished.txt"), sep = "\n")
-```
-
-```{r}
-md_table <- knitr::kable(data.frame(text = squished_table))
-```
-
-# convert to table
-
-If you've extracted text from a PDF and it has the format you've shown, one way to parse it is by recognizing patterns in the text.
-
-From your sample text:
-
--   Each section of the table begins with a title (e.g., "Supplemental basc3_srp Indices") and then lists different variables along with two scores.
--   Each variable and its scores are separated by a hyphen (`-`).
--   There is a pattern of "Name of the variable- Raw value- T score".
-
-Let's try to extract this using regular expressions and the string manipulation functions available in the `stringr` package:
-
-```{r}
-library(stringr)
-library(tibble)
-
-parse_extracted_text <- function(text) {
-  # Split text by lines
-  lines <- unlist(strsplit(text, split = "\n"))
-  
-  # Filter lines containing scores
-  score_lines <- lines[str_detect(lines, "-")]
-  
-  # Extract names, raw values, and T scores using regex
-  names <- str_extract(score_lines, ".*(?=\\s*-\\s*)")
-  values <- str_extract_all(score_lines, "(?<=-\\s*)[^-]*")
-  
-  # Convert to data.frame
-  df <- tibble(
-    Name = names,
-    RawValue = sapply(values, function(x) x[1]),
-    TScore = sapply(values, function(x) x[2])
-  )
-  
-  return(df)
-}
-
-# Sample text you provided
-text <- "Additional Profile Information
-Supplemental basc3_srp Indices
-Negative Distortion Indicators- Raw value- T score
-Malingering Index- 0- 44
-Instrumental Aggression Scale*- 15- 45
-Level of Care Index*- 1- 42
-Chronic Suicide Risk (S_Chron) Index*- 5- 45
-RXR Estimated Score*- N/A- 49 (4T lower than RXR)"
-
-df <- parse_extracted_text(text)
-print(df)
-```
-
-Note:
-
--   This solution assumes that your text follows the format you provided consistently.
--   You might need to adjust the function if the text has variations.
--   You can then further clean the `df`, for instance, by stripping off extra spaces or converting `N/A` to `NA`.
-
-After extracting, you can save the data frame as a CSV or RDS file for further use.
-
-```{r}
-library(stringr)
-library(tibble)
-
-parse_extracted_text <- function(text) {
-  # Split text by lines
-  lines <- unlist(strsplit(text, split = "\n"))
-  
-  # Filter lines containing scores
-  score_lines <- lines[str_detect(lines, "-")]
-  
-  # Split by hyphen and trim whitespace
-  split_values <- str_split(score_lines, "-")
-  trimmed_values <- lapply(split_values, str_trim)
-  
-  # Convert to data.frame
-  df <- tibble(
-    Name = sapply(trimmed_values, `[[`, 1),
-    RawValue = sapply(trimmed_values, `[[`, 2),
-    TScore = sapply(trimmed_values, `[[`, 3)
-  )
-  
-  return(df)
-}
-
-# Sample text you provided
-text <- "Additional Profile Information
-Supplemental basc3_srp Indices
-Negative Distortion Indicators- Raw value- T score
-Malingering Index- 0- 44
-Instrumental Aggression Scale*- 15- 45
-Level of Care Index*- 1- 42
-Chronic Suicide Risk (S_Chron) Index*- 5- 45
-RXR Estimated Score*- N/A- 49 (4T lower than RXR)"
-
-df <- parse_extracted_text(text)
-print(df)
-
-```
-
-If you want to further process the `TScore` column to split out any additional annotations (like "4T lower than RXR"), you can use similar string processing functions.
-Also, be aware that this function works well for the sample data you provided; if the format changes in other PDFs, you might need to make adjustments.
-
-Here's a quick way to further process the `TScore` column to get a cleaned version:
-
-```{r}
-df <- df %>%
-  dplyr::mutate(TScore_Cleaned = stringr::str_extract(TScore, "^\\d+"))
-
-print(df)
-```
-
-This will give you a new column `TScore_Cleaned` with just the numeric TScore, assuming all TScores are whole numbers.
-If they could be decimals, you'd need to adjust the regex slightly.
+**THE END!!**
