--- a/_02-02_academics.qmd
+++ b/_02-02_academics.qmd
@@ -6,9 +6,6 @@
 #| label: setup-academics
 #| include: false
 
-# Suppress warnings from being converted to errors
-options(warn = 1) # Set warn to 1 to make warnings not halt execution
-
 # domain
 domains <- c("Academic Skills")
 
@@ -188,6 +185,7 @@ grp_academics <- list(
 )
 
 # Create the table using the tbl_gt function from the bwu library
+# source("table_gt.R")
 bwu::tbl_gt(
   data = data_academics,
   pheno = pheno,
@@ -203,6 +201,8 @@ bwu::tbl_gt(
 ```{r}
 #| label: fig-academics-subdomain
 #| include: false
+#| fig-height: 6
+#| out-height: 100%
 #| fig-cap: "_Reading ability_ consists of three interrelated abilities: decoding, comprehension, and fluency. _Writing ability_ can be described in terms of spelling, grammar, expression of ideas, and writing fluency. _Math ability_ can be described in terms of calculation skills, applied problem solving, and math fluency."
 
 # data_academics <- data_academics |>
@@ -210,16 +210,13 @@ bwu::tbl_gt(
 #     scale == "School Readiness Composite (SRC)"
 #   )
 
-# Define the filename for the plot
+# Arguments
 filename <- "fig_academics_subdomain.svg"
+colors <- NULL
 
 # Define the x and y variables for the dotplot
 x <- data_academics$z_mean_subdomain
 y <- data_academics$subdomain
-
-# plot args
-colors <- NULL
-return_plot <- Sys.getenv("RETURN_PLOT")
 
 # Make dotplot
 bwu::dotplot(
@@ -227,7 +224,7 @@ bwu::dotplot(
   x = x,
   y = y,
   colors = colors,
-  return_plot = return_plot,
+  return_plot = TRUE,
   filename = filename,
   na.rm = TRUE
 )
@@ -236,12 +233,9 @@ bwu::dotplot(
 ```{r}
 #| label: fig-academics-narrow
 #| include: false
+#| fig-height: 6
+#| out-height: 100%
 #| fig-cap: "_Reading ability_ consists of three interrelated abilities: decoding, comprehension, and fluency. _Writing ability_ can be described in terms of spelling, grammar, expression of ideas, and writing fluency. _Math ability_ can be described in terms of calculation skills, applied problem solving, and math fluency."
-
-# data_academics <- data_academics |>
-#   dplyr::filter(
-#     scale == "School Readiness Composite (SRC)"
-#   )
 
 # Define the filename for the plot
 filename <- "fig_academics_narrow.svg"
@@ -252,7 +246,6 @@ y <- data_academics$narrow
 
 # plot args
 colors <- NULL
-return_plot <- Sys.getenv("RETURN_PLOT")
 
 # Make dotplot
 bwu::dotplot(
@@ -260,16 +253,15 @@ bwu::dotplot(
   x = x,
   y = y,
   colors = colors,
-  return_plot = return_plot,
+  return_plot = TRUE,
   filename = filename,
   na.rm = TRUE
 )
 ```
 
-
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Roboto Slab", size: 0.5em)
+  let font = (font: "Roboto Slab", size: 0.7em)
   set text(..font)
   pad(top: 0.5em)[]
   grid(
@@ -279,24 +271,25 @@ bwu::dotplot(
       [#image(file_qtbl)],
       caption: figure.caption(position: top, [#title]),
       kind: "qtbl",
-      supplement: [Table],
+      supplement: [*Table*],
     ),
     figure(
       [#image(file_fig, width: auto)],
       caption: figure.caption(
         position: bottom,
         [
-          _Reading ability_ consists of three interrelated abilities: decoding, comprehension, and fluency. _Writing ability_ can be described in terms of spelling, grammar, expression of ideas, and writing fluency. _Math ability_ can be described in terms of calculation skills, applied problem solving, and math fluency.
-        ],
+          Reading, writing, and math are the three main academic skills assessed on exam. _Reading ability_ consists of three interrelated abilities: decoding, comprehension, and fluency. _Writing ability_ can be described in terms of spelling, grammar, expression of ideas, and writing fluency. _Math ability_ can be described in terms of calculation skills, applied problem solving, and math fluency.
+          ],
       ),
       placement: none,
       kind: "image",
-      supplement: [Figure],
+      supplement: [*Figure*],
       gap: 0.5em,
     ),
   )
 }
 ```
+
 ```{=typst}
 #let title = "Academic Skills"
 #let file_qtbl = "table_academics.png"
@@ -307,6 +300,7 @@ bwu::dotplot(
   file_fig,
   )
 ```
+
 
 ```{=typst}
 #let title = "Academic Skills"
