--- a/_02-03_verbal.qmd
+++ b/_02-03_verbal.qmd
@@ -57,9 +57,6 @@ verbal <- verbal |>
   )
 
 # Write the resulting data frame to a new CSV file
-# The file name is created by concatenating the 'pheno' variable and ".csv"
-# NA values are replaced with an empty string in the output file
-# Column names are included in the output file
 # If the file already exists, it is overwritten (not appended)
 readr::write_excel_csv(verbal, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
 ```
@@ -67,9 +64,6 @@ readr::write_excel_csv(verbal, paste0(pheno, ".csv"), na = "", col_names = TRUE,
 ```{r}
 #| label: data-verbal
 #| include: false
-
-# Read data and filter
-data <- verbal
 
 scales <- c(
   "Academic Language Readiness Index",
@@ -129,7 +123,33 @@ scales <- c(
   "Writing",
   "Word Generation-Semantic",
   "Word Generation-Initial Letter",
-  "Semantic vs. Initial Letter Contrast"
+  "Semantic vs. Initial Letter Contrast",
+  "Language Index (LAN)",
+  "Oral Production",
+  "Auditory Comprehension",
+  "Auditory Comprehension Colors",
+  "Auditory Comprehension Shapes",
+  "Auditory Comprehension Colors/Shapes/Numbers",
+  "Auditory Comprehension Pointing",
+  "Auditory Comprehension Yes/No",
+  "Auditory Comprehension Paper Folding",
+  "Naming",
+  "Naming Semantic Cuing",
+  "Naming Phonemic Cuing",
+  "Reading Comprehension",
+  "Reading Comprehension Words",
+  "Reading Comprehension Sentences",
+  "Writing",
+  "Writing Legibility",
+  "Writing Spelling",
+  "Writing Syntax",
+  "Writing Conveyance",
+  "Bill Payment",
+  "Language Index (LAN)"
+  # "Attention Index (ATT)",
+  # "Spatial Index (SPT)",
+  # "Memory Index (MEM)",
+  # "Executive Functions Index (EXE)",
 )
 
 # Filter the data using the filter_data function from the bwu library
@@ -137,7 +157,7 @@ scales <- c(
 # The scale is specified by the 'scales' variable
 data_verbal <-
   bwu::filter_data(
-    data,
+    data = verbal,
     domain = domains,
     scale = scales
   )
@@ -149,7 +169,7 @@ data_verbal <-
 #| include: false
 
 # export text
-bwu::cat_neuropsych_results(data = verbal, file = "_02-03_verbal_text.qmd")
+bwu::cat_neuropsych_results(data = data_verbal, file = "_02-03_verbal_text.qmd")
 ```
 
 ```{r}
@@ -157,9 +177,12 @@ bwu::cat_neuropsych_results(data = verbal, file = "_02-03_verbal_text.qmd")
 #| dev: tikz
 #| fig-process: pdf2png
 #| include: false
+#| eval: true
 
 # Set the default engine for tikz to "xetex"
 options(tikzDefaultEngine = "xetex")
+
+data_verbal_tbl <- dplyr::filter(data_verbal, !is.na(percentile))
 
 # args
 table_name <- "table_verbal"
@@ -167,28 +190,32 @@ vertical_padding <- 0
 multiline <- TRUE
 
 # footnotes
-fn_scaled_score <- gt::md("Scaled score: Mean = 10 [50th‰], SD ± 3 [16th‰, 84th‰]")
-fn_standard_score <- gt::md("Index score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
-fn_t_score <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+fn_standard_score <- gt::md("Standard score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
+fn_scaled_score <- gt::md("Scaled score:  Mean = 10 [50th‰], SD ± 3 [16th‰, 84th‰]")
+fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+fn_z_score <- gt::md("Score = z-score (Mean = 0 [50th‰], SD ± 1 [16th‰, 84th‰])")
+
+source_note <- gt::md("_T_ score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
 
 # Define the groups for the table
 grp_verbal <- list(
   scaled_score = c("WAIS-IV", "WISC-5", "NEPSY-2", "D-KEFS", "WPPSI-IV", "CELF-5", "RBANS"),
   standard_score = c("NAB", "WPPSI-IV", "NAB-S", "CELF-5", "RBANS"),
-  t_score = c("NAB", "NAB-S", "NIH EXAMINER", "WASI-2")
+  t_score = c("NAB", "NAB-S", "NIH EXAMINER", "WASI-2", "NAB Language")
 )
 
 # make `gt` table
 bwu::tbl_gt(
-  data = data_verbal,
+  data = data_verbal_tbl,
   pheno = pheno,
   table_name = table_name,
-  fn_scaled_score = fn_scaled_score,
-  fn_standard_score = fn_standard_score,
-  fn_t_score = fn_t_score,
-  grp_scaled_score = grp_verbal[["scaled_score"]],
-  grp_standard_score = grp_verbal[["standard_score"]],
-  grp_t_score = grp_verbal[["t_score"]],
+  source_note = source_note,
+  # fn_scaled_score = fn_scaled_score,
+  # fn_standard_score = fn_standard_score,
+  # fn_t_score = fn_t_score,
+  # grp_scaled_score = grp_verbal[["scaled_score"]],
+  # grp_standard_score = grp_verbal[["standard_score"]],
+  # grp_t_score = grp_verbal[["t_score"]],
   dynamic_grp = grp_verbal,
   vertical_padding = vertical_padding,
   multiline = multiline
@@ -202,7 +229,7 @@ bwu::tbl_gt(
 
 # Arguments
 colors <- NULL
-return_plot <- Sys.getenv("RETURN_PLOT")
+return_plot <- TRUE
 filename <- "fig_verbal_subdomain.svg"
 
 # variables to plot
@@ -234,7 +261,7 @@ options(warn = 0) # Reset to default behavior
 
 # Arguments
 colors <- NULL
-return_plot <- Sys.getenv("RETURN_PLOT")
+return_plot <- TRUE
 filename <- "fig_verbal_narrow.svg"
 
 # variables to plot
@@ -259,10 +286,9 @@ bwu::dotplot(
 options(warn = 0) # Reset to default behavior
 ```
 
-
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Roboto Slab", size: 0.5em)
+  let font = (font: "Roboto Slab", size: 0.7em)
   set text(..font)
   pad(top: 0.5em)[]
     grid(
@@ -271,7 +297,7 @@ options(warn = 0) # Reset to default behavior
         figure([#image(file_qtbl)],
           caption: figure.caption(position: top, [#title]),
           kind: "qtbl",
-          supplement: [Table],
+          supplement: [*Table*],
           ),
         figure([#image(file_fig)],
           caption: figure.caption(position: bottom, [
@@ -279,13 +305,12 @@ options(warn = 0) # Reset to default behavior
             ]),
           placement: none,
           kind: "image",
-          supplement: [Figure],
+          supplement: [*Figure*],
           gap: 0.5em,
           ),
         )
     }
 ```
-
 ```{=typst}
 #let title = "Verbal/Language"
 #let file_qtbl = "table_verbal.png"
@@ -297,33 +322,7 @@ options(warn = 0) # Reset to default behavior
 )
 ```
 
-
-```{=typst}
-#let domain(title: none, file_qtbl, file_fig) = {
-  let font = (font: "Roboto Slab", size: 0.5em)
-  set text(..font)
-  pad(top: 0.5em)[]
-    grid(
-      columns: (50%, 50%),
-      gutter: 8pt,
-        figure([#image(file_qtbl)],
-          caption: figure.caption(position: top, [#title]),
-          kind: "qtbl",
-          supplement: [Table],
-          ),
-        figure([#image(file_fig)],
-          caption: figure.caption(position: bottom, [
-            Verbal and language functioning refers to the ability to access and apply acquired word knowledge, to verbalize meaningful concepts, to understand complex multistep instructions, to think about verbal information, and to express oneself using words.
-            ]),
-          placement: none,
-          kind: "image",
-          supplement: [Figure],
-          gap: 0.5em,
-          ),
-        )
-    }
-```
-```{=typst}
+<!-- ```{=typst}
 #let title = "Verbal/Language"
 #let file_qtbl = "table_verbal.png"
 #let file_fig = "fig_verbal_narrow.svg"
@@ -332,4 +331,4 @@ options(warn = 0) # Reset to default behavior
   file_qtbl,
   file_fig
 )
-```
+``` -->
